# rust_axum_api

./: .env  .env.example  Cargo.toml  Jenkinsfile
migrations/2024-07-05-212843_create_users/: up.sql
migrations/2024-07-06-204713_add_password_to_user/: up.sql
migrations/2024-07-08-213849_create_roles/: up.sql
src/: lib.rs  main.rs  schema.rs
src/config/: db.rs  test_db.rs
src/constants/: config_constants.rs  controller_constants.rs  middleware_constants.rs  repositories_constants.rs  services_constants.rs
src/controllers/: auth_controller.rs  user_controller.rs
src/helpers/: response_structs.rs
src/messages/: controller_constants.rs  global_constants.rs  middleware_constants.rs  repositories_constants.rs  services_constants.rs
src/middleware/: auth_middleware.rs  permission_middleware.rs
src/models/: user_model.rs
src/repositories/: user_repository.rs
src/routes/: auth_routes.rs  user_routes.rs
src/services/: auth_service.rs  password_service.rs  token_service.rs
tests/: config_db_tests.rs  user_repository_tests.rs
