[package]
name = "axumapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tower = "0.4.13"
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.80"
lazy_static = "1.5.0"
dotenv = "0.15.0"
diesel = { version = "2.2.1", features = ["postgres_backend", "postgres", "r2d2"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
